--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -89,8 +89,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: oh i don't know
         run: |
-          ls -la
-          ls -la ./scripts/init-db.sh
+          cat ./scripts/init-db.sh
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy
